k8s/Day-9-ingress-controller-nginx/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: giropops-senhas
  name: giropops-senhas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - image: linuxtips/giropops-senhas:latest
        name: giropops-senhas
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
